--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc -b && node ./dist/index.js",
+    "build": "tsc -b"
+  },
+  "dependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ws": "^8.5.4",
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.13.0"
   },
   "keywords": [],
   "author": "",
