--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+     "@repo/backend-common": "workspace:*",
+     "@repo/db":"workspace:*",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.5.4",
     "jsonwebtoken": "^9.0.2",
