--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
+     "@repo/db":"workspace:*",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "express": "^5.1.0",
