--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -6,17 +6,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
-    "./config": "./src/index.js"
+    "./config": "./src/index.ts"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "typescript": "^5.0.0"
+    "@repo/typescript-config": "workspace:*"
   },
-  "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@types/jsonwebtoken": "^9.0.9",
-    "jsonwebtoken": "^9.0.2"
-  },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
