--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,11 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "exports": {
-    "./types": "./src/index.js"
+    "./types": "./src/index.ts"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "typescript": "^5.0.0"
+    "@repo/typescript-config": "workspace:*"
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
