--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -7,8 +7,9 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-     "@repo/backend-common": "workspace:*",
+   "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common": "workspace:*",
+    "@repo/common": "workspace:*",
      "@repo/db":"workspace:*",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.5.4",
